fixing icons size and spacing

--- a/Css/style.css
+++ b/Css/style.css
@@ -316,14 +316,14 @@ body {
 }
 
 .project-desc {
-    font-size: 2vmin;
+    font-size: 3vmin;
     height: 30vh;
     width: 30vw;
     display: flex;
     align-content: center;
     align-items: center;
     justify-content: space-around;
-    padding: 0 1vw;
+    padding: 0 1;
     line-height: 1.5;
 }
 
@@ -346,15 +346,17 @@ body {
 
 .icon-container {
     height: 15vh;
-    width: 15vw;
+    width: 100%;
     display: flex;
     align-content: center;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
-
+.sub-icon {
+    height: 6vh;
+}
 .sql-icon {
-    margin-top: 0.5em;
-    margin-left: 0.5vw;
-    width: 5vw;
+    margin-top: 0.3em;
+    margin-left: 0.2em;
+    height: 4vh;
 }
